2001-08-06 Terry Biggs <tbiggs@users.sourceforge.net>

	* added delete and add modules to shortcut bar
	* added a favorites bar to shortcut bar
	* added files sw_shortcutbar.cpp and sw_shortcutbar.h



2001-08-04 Terry Biggs <tbiggs@users.sourceforge.net>

	* add bookmark menu now allows you to chose where to
	  add bookmark
	* added save verse list to bookmarks


2001-08-03 Terry Biggs <tbiggs@users.sourceforge.net>

	* added verse list to shortcut bar 
	* added files sw_verselist_sb.cpp and sw_verselist_sb.h
	* removed files gs_verselist_dlg.c gs_verselist_dlg.h 
				sw_verselist_dlg.cpp sw_verselist_dlg.h


2001-08-02 Terry Biggs <tbiggs@users.sourceforge.net>

	* added search to shortcut bar
	* added files sw_search.cpp and sw_search.h

2001-07-30 Terry Biggs <tbiggs@users.sourceforge.net>

	* convert old bookmarks to new on first start
	* run setup dialog on first start
	* preferences are applied when ok or apply button on
	   preferences dialog is pressed.

2001-07-28 Terry Biggs <tbiggs@users.sourceforge.net>

	* set version to 0.4.9
	* new preferences dialog
	* added files gs_preferences_dlg.c and gs_preferences_dlg.h
	* removed interface.c and interface.h	

2001-07-25 Terry Biggs <tbiggs@users.sourceforge.net>

	* added e-splash.c and e-spalash.h to src from gIDE from evolution
	* added splash.png to pixmaps
	* added splash screen	

2001-07-20 Terry Biggs <tbiggs@users.sourceforge.net>

	* added [view context] link to each interlinear verse that will swap 
	 it with the module in the main window. 
	* added Strongs, Footnotes and Morph Tags to interlinear popup menu.

2001-07-16 Terry Biggs <tbiggs@users.sourceforge.net>

	* added a verse list dialog that pops up when you  click a
	link in a ThML commentay.
	Thanks to SWORD ParseVerseList.
	* added notebook tabs to Bible window

2001-07-14 Terry Biggs <tbiggs@users.sourceforge.net>

	* Create new bookmark group and file is working.
	
2001-07-13 Terry Biggs <tbiggs@users.sourceforge.net>
