@@ -31,7 +31,9 @@ extern "C" {
 
 #include <gnome.h>	
 #include "gs_gnomesword.h"
-
+gboolean displaydictlexSBSWORD(gchar *modName, 
+					gchar *vlist, 
+					SETTINGS *s);
 gboolean getVerseListSBSWORD(gchar *modName, 
 					gchar *vlist, 
 					SETTINGS *s);
