@@ -1,3 +1,8 @@
+2001-08-10 Terry Biggs <tbiggs@users.sourceforge.net>
+
+	* added support for <sync type=Strongs> thml tags
+	* added fonts selection to preferences dialog
+
 2001-08-06 Terry Biggs <tbiggs@users.sourceforge.net>
 
 	* added delete and add modules to shortcut bar
